data/raw_logs/semantic/sem_22.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_22.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_22.c:1:28: error: lvalue required as left operand of assignment
    1 | int main() { int x = 5; &x = 10; }
      |                            ^
